--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="src/index.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
